feat: add JWT token Service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.h2.console.enabled=true
 
 spring.jpa.show-sql=true
 spring.jpa.defer-datasource-initialization=true
+
+
+jwt.secret=
+jwt.expiration=10800000
