feat: add JWT token Controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,5 @@ spring.jpa.show-sql=true
 spring.jpa.defer-datasource-initialization=true
 
 
-jwt.secret=
+jwt.secret=4K5OdEoLr0nVPkW4dFNyFKOmLNhJ9JQFqtfH0iGJm2WK1wakR1
 jwt.expiration=10800000
