--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,1 @@
-spring.datasource.url=jdbc:h2:mem:db_gotea
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=admin
-spring.datasource.password=admin
-
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
-
-spring.jpa.show-sql=true
-spring.jpa.defer-datasource-initialization=true
-
-
-jwt.secret=4K5OdEoLr0nVPkW4dFNyFKOmLNhJ9JQFqtfH0iGJm2WK1wakR1
-jwt.expiration=10800000
+spring.profiles.active=${APP_PROFILE:prod}
