--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,9 +1,9 @@
-spring.datasource.url=jdbc:h2:mem:db_gotea
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=admin
-spring.datasource.password=admin
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_example
+spring.datasource.username=root
+spring.datasource.password=senha123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
 
 
 jwt.secret=4K5OdEoLr0nVPkW4dFNyFKOmLNhJ9JQFqtfH0iGJm2WK1wakR1
