--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,10 +1,11 @@
-spring.datasource.url=jdbc:h2:mem:db_gotea
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=admin
-spring.datasource.password=admin
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.hibernate.ddl-auto=none
 
 
-jwt.secret=4K5OdEoLr0nVPkW4dFNyFKOmLNhJ9JQFqtfH0iGJm2WK1wakR1
-jwt.expiration=10800000
+jwt.secret=${JWT_SECRET}
+jwt.expiration=${JWT_EXPIRATION}
