--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_example
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/gotea_db
 spring.datasource.username=root
 spring.datasource.password=senha123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
